La vista Layout ha sido editada

--- a/Lab1_RicardoChian_PabloGarcia/Views/Shared/_Layout.cshtml
+++ b/Lab1_RicardoChian_PabloGarcia/Views/Shared/_Layout.cshtml
@@ -4,35 +4,36 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - Mi aplicación ASP.NET</title>
+    <title>@ViewBag.Title - Farma Plus S.A.</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 </head>
 <body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                @Html.ActionLink("Nombre de aplicación", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
-            </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Inicio", "Index", "Home")</li>
-                    <li>@Html.ActionLink("Acerca de", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contacto", "Contact", "Home")</li>
-                </ul>
-            </div>
+<div class="navbar navbar-inverse navbar-fixed-top" style="background-color: royalblue">
+    <div class="container">
+        <div class="navbar-header" style="color: black">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            @Html.ActionLink("Farma Plus S.A.", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+        </div>
+        <div class="navbar-collapse collapse">
+            <ul class="nav navbar-nav">
+                <li>@Html.ActionLink("Inicio", "Index", "Home", new {id = 1}, new {@style= "color:#000000;" })</li>
+                <li>@Html.ActionLink("Acerca de Farma Plus", "About", "Home", new { id = 2 }, new { @style = "color:#000000;" })</li>
+                <li>@Html.ActionLink("Contactanos", "Contact", "Home", new { id = 3 }, new { @style = "color:#000000;" })</li>
+            </ul>
         </div>
     </div>
-    <div class="container body-content">
+</div>
+
+<div class="container body-content">
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - Mi aplicación ASP.NET</p>
+            <p>&copy; @DateTime.Now.Year - Laboratorio 1 Ricardo Chian & Pablo Garcia</p>
         </footer>
     </div>
 
