--- a/Lab1_RicardoChian_PabloGarcia/Views/Shared/_Layout.cshtml
+++ b/Lab1_RicardoChian_PabloGarcia/Views/Shared/_Layout.cshtml
@@ -22,8 +22,7 @@
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-                @*#fff;*@
-                <li>@Html.ActionLink("Inicio", "Index", "Home", new { id = 1 }, new { @style = "color:#000000;" })</li>
+                <li>@Html.ActionLink("Inicio", "Index", "Home", new { id = 1 }, new { @class = "my-class" })</li>
                 @*<li>@Html.ActionLink("Inicio", "Index", "Home", new { id = 1 }, new { @class ="my-class" })</li>*@
             </ul>
         </div>
