--- a/Lab1_RicardoChian_PabloGarcia/Views/Shared/_Layout.cshtml
+++ b/Lab1_RicardoChian_PabloGarcia/Views/Shared/_Layout.cshtml
@@ -22,9 +22,8 @@
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-                <li>@Html.ActionLink("Inicio", "Index", "Home", new { id = 1 }, new { @class = "my-class" })</li>
-                <li>@Html.ActionLink("PabloCommit", "Index", "Home", new { id = 1 }, new { @class = "my-class" })</li>
-                <li>@Html.ActionLink("RicardoCommit", "Index", "Home", new { id = 1 }, new { @class = "my-class" })</li>
+                <li>@Html.ActionLink("Empleados", "Index", "Home", new { id = 1 }, new { @class = "my-class" })</li>
+                <li>@Html.ActionLink("Control de empleados", "Index", "Home", new { id = 1 }, new { @class = "my-class" })</li>
             </ul>
         </div>
     </div>
