Helper creado, AppStart configurado, vista creada, tabla configurada

--- a/Lab1_RicardoChian_PabloGarcia/Views/Shared/_Layout.cshtml
+++ b/Lab1_RicardoChian_PabloGarcia/Views/Shared/_Layout.cshtml
@@ -18,12 +18,12 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            @Html.ActionLink("Farma Plus S.A.", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+            @Html.ActionLink("Farma Plus S.A.", "Index", "Empleado", new { area = "" }, new { @class = "navbar-brand" })
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-                <li>@Html.ActionLink("Empleados", "Index", "Home", new { id = 1 }, new { @class = "my-class" })</li>
-                <li>@Html.ActionLink("Control de empleados", "Index", "Home", new { id = 1 }, new { @class = "my-class" })</li>
+                <li>@Html.ActionLink("Empleados", "Index", "Empleado", new { id = 1 }, new { @class = "my-class" })</li>
+                <li>@Html.ActionLink("Control de empleados", "Index", "Empleado", new { id = 1 }, new { @class = "my-class" })</li>
             </ul>
         </div>
     </div>
