--- a/Lab1_RicardoChian_PabloGarcia/Views/Shared/_Layout.cshtml
+++ b/Lab1_RicardoChian_PabloGarcia/Views/Shared/_Layout.cshtml
@@ -10,7 +10,7 @@
     @Scripts.Render("~/bundles/modernizr")
 </head>
 <body>
-<div class="navbar navbar-inverse navbar-fixed-top" style="background-color: royalblue">
+<div class="navbar navbar-inverse navbar-fixed-top" style="background-color:olivedrab">
     <div class="container">
         <div class="navbar-header" style="color: black">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
