--- a/Lab1_RicardoChian_PabloGarcia/Views/Shared/_Layout.cshtml
+++ b/Lab1_RicardoChian_PabloGarcia/Views/Shared/_Layout.cshtml
@@ -23,7 +23,7 @@
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
                 <li>@Html.ActionLink("Empleados", "Index", "Empleado", new { id = 1 }, new { @class = "my-class" })</li>
-                <li>@Html.ActionLink("Control de empleados", "Index", "Empleado", new { id = 1 }, new { @class = "my-class" })</li>
+                <li>@Html.ActionLink("Control de empleados", "Parqueo", "Empleado", new { id = 1 }, new { @class = "my-class" })</li>
             </ul>
         </div>
     </div>
