--- a/Lab1_RicardoChian_PabloGarcia/Views/Empleado/Index.cshtml
+++ b/Lab1_RicardoChian_PabloGarcia/Views/Empleado/Index.cshtml
@@ -81,7 +81,7 @@
                 <td>-</td>
             }
         }
-        @if (item.Disponible != true)
+        @if (item.Disponible == false && item.HorasTrabajadas.Hours != 0)
         {
             <td>
                 @Html.DisplayFor(modelItem => item.HoraDeSalida)
