Simulaciones terminadas, lab terminado. (Solo falta busquedas)

--- a/Lab1_RicardoChian_PabloGarcia/Views/Empleado/Parqueo.cshtml
+++ b/Lab1_RicardoChian_PabloGarcia/Views/Empleado/Parqueo.cshtml
@@ -64,3 +64,11 @@ else
         </tr>
     }
 </table>
+
+@if (Data.Instance.PilaEmpleados.Count != 0)
+{
+    <hr />
+    <p>
+        @Html.ActionLink("Simular salida a trabajar y retorno", "SimularSalida")
+    </p>
+}
