--- a/Lab1_RicardoChian_PabloGarcia/Views/Shared/_Layout.cshtml
+++ b/Lab1_RicardoChian_PabloGarcia/Views/Shared/_Layout.cshtml
@@ -24,6 +24,7 @@
             <ul class="nav navbar-nav">
                 <li>@Html.ActionLink("Empleados", "Index", "Empleado", new { id = 1 }, new { @class = "my-class" })</li>
                 <li>@Html.ActionLink("Control de parqueo", "Parqueo", "Empleado", new { id = 1 }, new { @class = "my-class" })</li>
+                <li>@*Html.ActionLink("Búsqueda de Empleados", "Buscador", "Empleado", new { id = 1 }, new { @class = "my-class" })*@</li>
             </ul>
         </div>
     </div>
