--- a/Lab1_RicardoChian_PabloGarcia/Views/Empleado/Index.cshtml
+++ b/Lab1_RicardoChian_PabloGarcia/Views/Empleado/Index.cshtml
@@ -12,7 +12,7 @@
 </p>
 
 <p>
-    @Html.ActionLink("Registro automático (Archivo *.csv)", "Create")
+    @Html.ActionLink("Registro automático (Archivo *.csv)", "CrearPorArchivo")
 </p>
 
 <table class="table">
